<resources>
    <string name="app_name">Movie App</string>
    <string name="search">Search</string>
    <string name="about">About</string>
    <string name="show_more">Show more</string>
    <string name="show_less">Show less</string>

    <string name="Birthday">Birthday</string>
    <string name="Birthplace">Birthplace</string>
    <string name="homepage">Homepage</string>
    <string name="sortBy">Sort By</string>
    <string name="popular">Popular</string>
    <string name="upcoming">Upcoming</string>
    <string name="now_playing">Now Playing</string>
    <string name="nav_discover">Discover</string>
    <string name="nav_bookmarks">Bookmarks</string>
    <string name="movie_saved">Movie is saved to bookmarks</string>
    <string name="bookmark">Bookmark</string>

    <string name="open_source_licenses">Open Source Licenses</string>
    <string name="tmdb_usage">This app gets movie information and images from The Movie Database. https://www.themoviedb.org/</string>
    <string name="remove_bookmark">Remove Bookmark</string>
    <string name="movie_unsaved">Movie is removed from bookmarks</string>
    <string name="empty">Empty</string>
    <string name="try_again">Try again</string>
    <string name="internet_error_please_check_your_connection">Internet error, Please check your connection</string>
    <string name="release_date">Release Date</string>
    <string name="rating">Rating</string>
    <string name="runtime">Runtime</string>
    <string name="description">An app that helps user search for movies</string>
    <string name="movie_poster">Movie poster</string>
    <string name="person_portrait">Person portrait</string>
    <string name="cast">Cast</string>
    <string name="crew">Crew</string>


</resources>
