<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/searchItem"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="collapseActionView|ifRoom" />



    <item android:id="@+id/sortByItem"
        android:icon="@drawable/ic_whatshot"
        android:title="@string/sortBy"
        app:showAsAction="always">
        <menu>
            <item android:id="@+id/popularItem"
                android:title="@string/popular" />
            <item android:id="@+id/nowPlayingItem"
                android:title="@string/now_playing" />
            <item android:id="@+id/upcomingItem"
                android:title="@string/upcoming" />
        </menu>
    </item>
</menu>