<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/detailsImageView"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            android:src="@android:color/darker_gray" />


            <com.google.android.material.chip.ChipGroup
                android:id="@+id/detailsGenresCg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_normal"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="@dimen/margin_normal"
                app:chipSpacingVertical="4dp"
                app:singleLine="false" />


        <RelativeLayout
            android:id="@+id/detailsDescriptionContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_normal"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="@dimen/margin_normal"
            android:animateLayoutChanges="true"
            android:background="?selectableItemBackground">

            <TextView
                android:id="@+id/detailsDescriptionTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="5"
                android:paddingBottom="24dp"
                tools:text="@tools:sample/lorem" />

            <TextView
                android:id="@+id/detailsDescriptionMoreTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:gravity="center_horizontal"
                android:text="@string/show_more"
                android:textSize="16sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/detailsDescriptionLessTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:gravity="center_horizontal"
                android:text="@string/show_less"
                android:textSize="16sp"
                android:textStyle="italic"
                android:visibility="invisible" />
        </RelativeLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:paddingTop="16dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:text="@string/release_date"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/detailsReleaseTv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    tools:text="12.03.1999" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:text="@string/rating"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/detailsRatingTv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="Placeholder"
                    android:textAlignment="center"
                    android:textSize="14sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:text="@string/runtime"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/detailsRuntimeTv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="Placeholder"
                    android:textAlignment="center"
                    android:textSize="14sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>


    </LinearLayout>
</layout>
